# University_PD111

./: .gitignore  CMakeLists.txt  Contacts.h  Date.h  DateOfBirth.h  Empioee.h  Person.h  Progress.h  README.md  Staff.h  Student.h  Teacher.h  main.cpp  Структура классов для CLI.drawio  команды интерфейса.txt
CLI/: CLI.h
Contacts/: Contacts.h
DataBase/: DataBase.h  DataBaseEmployees.h  DataBaseStudents.h  DataBaseTeachers.h
Date/: Date.h
Files/: Person.csv  Staff.csv  Student.csv  Teacher.csv  matematic_progress.csv
LogFile/: LogFile.h
Person/: Person.h
Person/Employee/: Employee.h
Person/Employee/Teacher/: Teacher.h
Person/Student/: Progress.h  Student.h
University/: University.h
